--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>We are famous</h1>
+    <p>Hello everyone, how are you</p>
+
+    <h3>My name is nazmul suzon</h3>
+    <h3>I am from Bangladesh</h3>
 </body>
 </html>
