--- a/index.html
+++ b/index.html
@@ -8,10 +8,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>We are famous</h1>
-    <p>Hello everyone, how are you</p>
-
-    <h3>My name is nazmul suzon</h3>
-    <h3>I am from Bangladesh</h3>
+    <main>
+        <div class="players">
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Player Name-1</h3>
+            </div>
+            <div class="player">
+                <img src="images/players/player-2.png" alt="">
+                <h3>Player Name-2</h3>
+            </div>
+            <div class="player">
+                <img src="images/players/player-3.png" alt="">
+                <h3>Player Name-3</h3>
+            </div>
+            <div class="player">
+                <img src="images/players/player-4.png" alt="">
+                <h3>Player Name-4</h3>
+            </div>
+            <div class="player">
+                <img src="images/players/player-5.png" alt="">
+                <h3>Player Name-5</h3>
+            </div>
+            <div class="player">
+                <img src="images/players/player-6.png" alt="">
+                <h3>Player Name-6</h3>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
